hphp/hack/test/typecheck/as_expression/invalid_hint_class_with_generics.php.exp
File "invalid_hint_class_with_generics.php", line 9, characters 3-13:
  C<int>
File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
Invalid "as" expression hint (Typing[4199])
  File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
  The "as" operator should not be used with a type with generics, because generics are erased at runtime
